# SaraAI

./: .gitignore  LICENSE.txt  README.md  app_control.py  tts.py  utils.py
2.0-enhanced/: browser_handler.py  face_unlock.py  file_handler.py  gesture_handler.py  main.py  requirements.txt  utils.py
Sara/: pyvenv.cfg
Sara AI 6.0 [Offline]/: README.md
Sara AI Max/: README.md
Sara/Scripts/: activate  activate.bat
sara-ai-max/: .env.example  .gitignore  AUTOMATION_GUIDE.md  GITHUB_SETUP.md  GUI_README.md  README.md  config.example.json  gui.py  main.py  main_working.py  requirements.txt  simple_sara.py  test_automation.py  web_gui.py
sara-ai-max/automation/: __init__.py  app_controller.py  archives.py  file_ops.py  system.py
sara-ai-max/cli/: __init__.py  saractl.py
sara-ai-max/connectors/: __init__.py  browser.py  email.py  messaging.py  office.py
sara-ai-max/docs/: API.md  GETTING_STARTED.md  developer_guide.md  security_policy.md
sara-ai-max/plugins/: __init__.py  plugin_manager.py  sdk.py
sara-ai-max/sara_core/: __init__.py  context.py  executor.py  nlu.py  planner.py  security.py  voice_engine.py
sara-ai-max/skills/: __init__.py  base_skill.py  send_message.py  web_search.py
sara-ai-max/templates/: index.html
sara-ai-max/tests/: test_automation.py  test_core.py  test_integration.py  test_security.py
sara-ai-max/vision/: __init__.py  ocr.py  screenshot.py  ui_finder.py
v1-basic/: README.md  application_handler.py  main.py
v2.0/: README.md  app_control.py  main.py  music_player.py  requirements.txt  tts.py
v2.0-enhanced/: LICENSE.txt  code_writer.py  music_player.py
v3.0/: CONTRIBUTING.md  LICENSE  ai_engine.py  config.py  requirements.txt
v3.0/browser_control/: browser.py
v3.0/software_launcher/: open_apps.py
v3.0/system_control/: lock_shutdown.py  uninstall.py
v4.0/: README.md
v4.0/SaraAI_CSharp/: Dual Mode Operation.md  How to Run.md  SaraAI.csproj  Windows Installer.md
v5.0/: HOW_TO_USE.md  saraai-5.0.sln
v5.0 /: README.md
v5.0/core-python/: main.py  requirements.txt
v5.0/core-python/src/core/: command_processor.py  wake_word_detector.py
v5.0/core-python/src/modules/: dashboard_server.py  system_client.py  tts_client.py
v5.0/knowledge-rust/src/: main.rs
v5.0/scripts/: build.ps1
v5.0/speech-cpp/src/: main.cpp
v5.0/system-csharp/: Program.cs  SystemControl.csproj
v5.0/tts-java/src/main/java/com/saraai/tts/: TTSController.java  TTSEngineConfig.java  TTSService.java
versions/v1-basic/: README.md  browser_handler.py  requirements.txt
versions/v2.0/: README.md  application_handler.py  browser_handler.py  utils.py
versions/v2.0-enhanced/: README.md  application_handler.py  task_manager.py  voice_input.py
versions/v3.0/: CHANGELOG.md  EXAMPLES.md  INSTALL.md  LM_STUDIO_SETUP.md  PROJECT_STATUS.md  README.md  main.py  sara_fast.py  voice_engine.py
versions/v3.0/code_writer/: code_writer.py
versions/v3.0/music_control/: music.py
versions/v3.0/system_control/: file_manager.py
versions/v4.0/: README.md  SaraAI4.0.sln
versions/v4.0/SaraAI_CSharp/: main.cs  run.bat
versions/v5.0/: README.md
versions/v5.0/config/: api_config.yaml
versions/v5.0/core-python/src/config/: settings.py
versions/v5.0/core-python/src/core/: ai_brain.py  orchestrator.py
versions/v5.0/core-python/src/modules/: __init__.py  knowledge_client.py  speech_client.py
versions/v5.0/core-python/src/utils/: logger.py
versions/v5.0/dashboard-js/: package.json
versions/v5.0/dashboard-js/public/: index.html
versions/v5.0/knowledge-rust/: Cargo.toml
versions/v5.0/speech-cpp/: CMakeLists.txt
versions/v5.0/speech-cpp/include/: stt_interface.h
versions/v5.0/tts-java/: pom.xml
versions/v5.0/tts-java/src/main/java/com/saraai/tts/: TTSApplication.java
versions/v6.0-offline/: LICENSE  README.md  automation.py  command-handler.js  main.js  package.json  preload.js  requirements.txt
versions/v6.0-offline/renderer/: index.html  renderer.js  styles.css
